# yiutils

./: .gitignore  DEV.md  DEVEL.md  LICENSE  Makefile  README.md  TODO.org  environment.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: sanity.py
src/yiutils/: chunking.py  failsafe.py  processing.py  project_utils.py
tests/: test_always_true.py  test_chunking.py  test_failsafe.py  test_processing.py
