[tool.poetry]
name = "yiutils"
version = "0.1.0"
description = "yi's utils"
authors = ["YiLiu6240 <yi.liu6240@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
