[tool.poetry]
name = "yiutils"
version = "0.1.0"
description = "yi's utils"
authors = ["YiLiu6240 <yi.liu6240@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = {version = "^5.12", python = "^3.8"}
flake8 = {version = "^6.0.0", python = "^3.8.1"}
black = "^23.3.0"
autoflake = {version = "^2.2.0", python = "^3.8"}
mypy = "^1.4.1"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
