[project]
name = "yiutils"
version = "0.1.1"
description = "yi's utils"
authors = [{name = "YiLiu6240", email = "yi.liu6240@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a19",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
extend-ignore = ["E501"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
